added total marks

--- a/studentsclass/templates/studentsclass/subjects.html
+++ b/studentsclass/templates/studentsclass/subjects.html
@@ -16,6 +16,7 @@
                 <th>Geography</th>
                 <th>History</th>
                 <th>Business</th>
+                <th>Total Marks</th>
             </tr>
         </thead>
         <tbody>
@@ -32,6 +33,7 @@
                 <td>{{subject.geography}}</td>
                 <td>{{subject.history}}</td>
                 <td>{{subject.business}}</td>
+                <td>{{subject.total_student_marks}</td>
             </tr>
             {% endfor %}
         </tbody>
