--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
                         <a class="nav-link" href="{% url 'student_form' %}">New Student</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'subjects' %}">Students Performance</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li class="nav-item">
